@startuml
left to right direction
!theme plain
' Entités
class User {
    + id: Integer
    + username: String
    + password: String
    + profile_picture: String
    + email: String
    + about: String
    + type: String (Défaut: "User")
    ---
    + createPost(): void
    + createReply(Integer postId): void
    + modifyPost(Integer id): void
    + deletePost(Integer id): void
}

class Category {
    + id: Integer
    + title: String
}

class Post {
    + id: Integer
    + title: String
    + story: String
    + post_date: Date
    ---
    + post_owner: User
    + category: Category
}

class Comment {
    + id: Integer
    + comment: String
    + comment_date: Date
    ---
    + comment_owner: User
    + post: Post
}

' Relations
Category "1" -- "n" Post : contains
User "1" -- "n" Post : owns
User "1" -- "n" Comment : has commented
Post "1" -- "n" Comment : has comments


@enduml